@@ -11,7 +11,6 @@
     "client.ClientLevelAccessor",
     "client.EntityClientMixin",
     "client.EntityRenderDispatcherMixin",
-    "client.GameRendererMixin",
     "client.HumanoidPoseMixin",
     "client.LevelRendererMixin",
     "client.LightingMixin",
